# ra-rust-agent-tool

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
config/: default.toml
crates/ra-cli/: Cargo.toml
crates/ra-cli/src/: main.rs
crates/ra-cli/src/commands/: agent.rs  dashboard.rs  history.rs  mod.rs  resume.rs  run.rs  status.rs
crates/ra-core/: Cargo.toml
crates/ra-core/src/: agent.rs  checkpoint.rs  config.rs  error.rs  event.rs  ipc.rs  lib.rs  metrics.rs  run.rs  template.rs  workflow.rs
crates/ra-engine/: Cargo.toml
crates/ra-engine/src/: agent_manager.rs  context.rs  dag.rs  lib.rs  process.rs  runner.rs  scheduler.rs  stream_parser.rs
crates/ra-mcp/: Cargo.toml
crates/ra-mcp/src/: handler.rs  ipc_broadcaster.rs  lib.rs  main.rs  protocol.rs  server.rs  tools.rs
crates/ra-observe/: Cargo.toml
crates/ra-observe/src/: dashboard.rs  export.rs  ipc_client.rs  lib.rs  metrics_collector.rs  tracing_setup.rs
crates/ra-store/: Cargo.toml
crates/ra-store/src/: checkpoint_store.rs  db.rs  history_store.rs  lib.rs
examples/: hello.yaml  parallel_review.yaml  sequential_pipeline.yaml
templates/: bug-hunt.yaml  codebase-onboard.yaml  migration-planner.yaml  pre-pr-review.yaml  test-generator.yaml
