[workspace]
resolver = "2"
members = [
    "crates/ra-core",
    "crates/ra-engine",
    "crates/ra-store",
    "crates/ra-observe",
    "crates/ra-cli",
    "crates/ra-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vpescetelli/ra"
description = "RA — Rust Agent Orchestrator for Claude Code"
authors = ["Vincenzo Pescetelli"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
