[package]
name = "ra-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for RA — Rust Agent Orchestrator for Claude Code"

[dependencies]
ra-core = { path = "../ra-core" }
ra-engine = { path = "../ra-engine" }
ra-store = { path = "../ra-store" }
ra-observe = { path = "../ra-observe" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
async-trait = { workspace = true }

[[bin]]
name = "ra-mcp-server"
path = "src/main.rs"
