[package]
name = "ra-observe"
version = "0.1.0"
edition = "2021"

[dependencies]
ra-core = { path = "../ra-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
dashmap = "6.0"
csv = "1.3"
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
